--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# Folders included from old versions of the repo (no longer used)
+data/
+images/
+materials/
+model_weights/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
